<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_detalhes_produto_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_action_editar"
        android:title="Editar"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_detalhes_produto_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Remover"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom"/>

</menu>